# splx

./: README.md  main.py  pyproject.toml
bsplx/: __init__.py
bsplx/bspline/: bspline.py
splx/bspline/: bspline.py
